--- a/mytp/index.htm
+++ b/mytp/index.htm
@@ -7,6 +7,7 @@
 		</style>
                 <script language="javascript" type="text/javascript" src="lib/affiche.js" ></script>
                 <script language="javascript" type="text/javascript" src="lib/menu.js" ></script>
+                <script language="javascript" type="text/javascript" src="lib/toolkit.js" ></script>                
 	</head>
 	<body>
 		<!--<div id="bandeau">&nbsp;</div> -->
@@ -36,6 +37,10 @@
 			<p>En vous rendant dans notre espace <a href="commande.htm">commande</a> vous pourrez enregistrer votre selection dans un pannier d'achat.</p>	<p>Ce site vous permet de consulter et commander parmis un stock de Bandes dessinnées disponibles.</p>
 			<p>La rubrique <a href="recherche.htm">recherche</a> vous permet de consulter le catalogue des bandes dessinées disponibles.</p>
 			<p>En vous rendant dans notre espace <a href="commande.htm">commande</a> vous pourrez enregistrer votre selection dans un pannier d'achat.</p>
+                        
+                        <script language="javascript" type="text/javascript">
+                            document.write(print_r(pagesDisponibles));
+                        </script>
 		</div>
 		<div id="pied"><span>&copy; 2009 STARTX - Réalisé par Christophe LARUE</span></div>
                 
